fix for Pk-1866

--- a/src/Kooco.Pikachu.Blazor/Pages/CashFlowSettings/CashFlowDealerSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/CashFlowSettings/CashFlowDealerSettings.razor
@@ -211,7 +211,7 @@
 </Card>
 
 <!-- ===================== ChinaTrust ===================== -->
-@if(Configuration["App.Environment"]!="Production")
+@if(Configuration["App:Environment"]=="Development")
 {
 <Card>
     <CardHeader>
