--- a/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/AutomaticEmailing.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/AutomaticEmailing.razor
@@ -45,7 +45,7 @@
     <Div Class="col-md-6 col-sm-12 text-end">
         <Button Type="ButtonType.Button" Class="btn btn-sm btn-primary" Clicked="CreateNew">
             <i class="fa fa-plus"></i>
-            @L["New"]
+            @L["AddNewMailing"]
         </Button>
     </Div>
 </Div>
