--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -39,6 +39,7 @@
     <link href="~/global-styles.css" rel="stylesheet">
     <link href="_content/Blazorise.LoadingIndicator/blazorise.loadingindicator.css" rel="stylesheet" />
     <link href="~/css/custom-menu.css" rel="stylesheet">
+    <link href="~/css/pikachu-file-input.css" rel="stylesheet">
 
     <script src="~/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
 
@@ -78,4 +79,5 @@
     <script src="/redirectConfirmClose.js"></script>
     <script src="/lib/tinymce/tinymce.min.js"></script>
     <script src="/js/tinymce-interop.js"></script>
+    <script src="/js/pikachu-file-input.js"></script>
 </body>
