#PK-1816 Payout Details UI implementation

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TenantPayout.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TenantPayout.razor
@@ -111,6 +111,7 @@
         </CardHeader>
         <CardBody>
             <button class="back-btn" @onclick="BackToYears">← @L["BackToYears"]</button>
+            <PayoutDetails Year="SelectedYear" />
         </CardBody>
     </Card>
 }
