--- a/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TCatFileImportModal.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TCatFileImportModal.razor
@@ -8,7 +8,7 @@
     <ModalContent Size="_recordsVisible? ModalSize.ExtraLarge: ModalSize.Large">
         <ModalHeader>
             <ModalTitle>
-                <h3>@L[_recordsVisible ? "Import" : "UploadFile"]</h3>
+                <h3>@L[_recordsVisible ? "Import" : "TCatFileUpload"]</h3>
                 <span>@L[_recordsVisible ? "VerifyTCatFileAndImport" : "UploadTCatFileTitleDescription"]</span>
             </ModalTitle>
             <button class="close-btn" @onclick="CloseModal">×</button>
